// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should render correctly 1`] = `ReactWrapper {}`;

exports[`Divider should support float 1`] = `ReactWrapper {}`;

exports[`Divider should work with align and volume 1`] = `
LoadedCheerio {
  "0": <div>
    <div
      class="nextui-c-bZLhCa nextui-c-bZLhCa-qCmpO-color-default nextui-c-bZLhCa-iiMwZzC-css"
      role="separator"
    >
      <span
        class="nextui-c-jsIVaD nextui-c-jsIVaD-icpijqj-css nextui-divider-text"
      >
        start
      </span>
    </div>
    <div
      class="nextui-c-bZLhCa nextui-c-bZLhCa-qCmpO-color-default nextui-c-bZLhCa-iiMwZzC-css"
      role="separator"
    >
      <span
        class="nextui-c-jsIVaD nextui-c-jsIVaD-icpijqj-css nextui-divider-text"
      >
        left
      </span>
    </div>
    <div
      class="nextui-c-bZLhCa nextui-c-bZLhCa-qCmpO-color-default nextui-c-bZLhCa-iiMwZzC-css"
      role="separator"
    >
      <span
        class="nextui-c-jsIVaD nextui-c-jsIVaD-iknAPSa-css nextui-divider-text"
      >
        end
      </span>
    </div>
    <div
      class="nextui-c-bZLhCa nextui-c-bZLhCa-qCmpO-color-default nextui-c-bZLhCa-ibOTthN-css"
      role="separator"
    >
      <span
        class="nextui-c-jsIVaD nextui-c-jsIVaD-icpijqj-css nextui-divider-text"
      >
        start
      </span>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Divider should work with type 1`] = `
LoadedCheerio {
  "0": <div>
    <div
      class="nextui-c-bZLhCa nextui-c-bZLhCa-ebPlNg-color-secondary nextui-c-bZLhCa-iiMwZzC-css"
      role="separator"
    />
    <div
      class="nextui-c-bZLhCa nextui-c-bZLhCa-ijPvPU-color-warning nextui-c-bZLhCa-iiMwZzC-css"
      role="separator"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Divider should work with x and y 1`] = `
LoadedCheerio {
  "0": <div>
    <div
      class="nextui-c-bZLhCa nextui-c-bZLhCa-qCmpO-color-default nextui-c-bZLhCa-ieTOsbl-css"
      role="separator"
    />
    <div
      class="nextui-c-bZLhCa nextui-c-bZLhCa-qCmpO-color-default nextui-c-bZLhCa-ifmABdt-css"
      role="separator"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
